# MaterialeSerate

./: .gitignore  LICENSE  PythonBiellaGroup-Presentazione.pptx  README.md  Template-PBG.pptx
5_time_series/: ts.py
CalcoloParalleloDistribuito/: pyproject.toml
CalcoloParalleloDistribuito/CPD/: bokeh_util.py  joblib.ipynb  joblib_ray.py  multiprocessing.ipynb  multithreading.ipynb  process_communication.py  process_lock.py  process_sync.py  ray.ipynb  ray_actors.ipynb  ray_tasks.ipynb
ChatGPT_Detection/: .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  launch.sh  mypy.ini  pyproject.toml
ChatGPT_Detection/.devcontainer/: docker-compose.yml
ChatGPT_Detection/Docker/: app.dockerfile  db.dockerfile  dev.dockerfile
ChatGPT_Detection/app/: main.py
ChatGPT_Detection/app/src/: config.py  openai.py
ChatGPT_Detection/notebooks/: classical_baseline_ridotto.ipynb  gpt_text.ipynb  test.ipynb
ChatbotAI_Telegram/: .gitignore  README.md  launch.sh  pyproject.toml
ChatbotAI_Telegram/app/: PBG_Bot.py  bot.py  main.py
ChatbotAI_Telegram/app/data/: dataset.xlsx  db_esempio.csv
ChatbotAI_Telegram/notebook/: Class_NLP_Query.ipynb  NLP for querying (Open)Data.ipynb  dataset.xlsx
FastAPI/02/pydantic/: ordini_dataclass.py  ordini_pyd.py  ordini_std.py  ordini_std_corretto.py  pyproject.toml
FastAPI/05/: async_scrape.py  pyproject.toml  sync_scrape.py
MLPipeline/: .gitignore  README.md  pyproject.toml
MLPipeline/data/: data.yaml
MLPipeline/hydraconfig/config/: train.yaml
MLPipeline/hydraconfig/config/dataloader/: cifar.yaml  mnist.yaml
MLPipeline/hydraconfig/config/experiment/: cifar_ff.yaml  mnist_cnn.yaml
MLPipeline/hydraconfig/config/model/: cnn.yaml  ffnn.yaml
MLPipeline/hydraconfig/src/: train.py  train_no_hydra.py
MLPipeline/hydraconfig/src/dataloaders/: cifar.py  mnist.py
MLPipeline/hydraconfig/src/models/: cnn.py  ffnn.py
MLPipeline/pt/src/: test.py  train.py  utils.py
MLPipeline/pt/src/datasets/: cifar.py
MLPipeline/pt/src/models/: cnn.py
MLPipeline/ptlight/src/: test.py  train.py
MLPipeline/ptlight/src/datamodule/: cifar.py
MLPipeline/ptlight/src/models/: cnn.py
MLPipeline/ptlighthydra/configs/: train.yaml
MLPipeline/ptlighthydra/configs/callbacks/: default.yaml
MLPipeline/ptlighthydra/configs/datamodule/: cifar.yaml
MLPipeline/ptlighthydra/configs/experiment/: cifar10.yaml
MLPipeline/ptlighthydra/configs/logger/: many.yaml
MLPipeline/ptlighthydra/configs/model/: cifar.yaml
MLPipeline/ptlighthydra/configs/trainer/: default.yaml
MLPipeline/ptlighthydra/src/: train.py
MLPipeline/ptlighthydra/src/callbacks/: logging.py
MLPipeline/ptlighthydra/src/datamodule/: cifar.py
MLPipeline/ptlighthydra/src/models/: cnn.py
MLPipeline/ptlighthydra/src/pipeline/: train.py
MLPipeline/ptlighthydra/src/utils/: __init__.py
ModernPythonDevelopment/Lab1/Esempio/: pyproject.toml
ModernPythonDevelopment/Lab1/streamlit-page-master/: .flake8  .gitignore  README.md  app.py  poetry.toml  pyproject.toml  pytest.ini  requirements.txt
ModernPythonDevelopment/Lab1/streamlit-page-master/tests/: test_streamlit_page.py
PercorsoDati/: .flake8  README.md  pyproject.toml  requirements.txt
PercorsoDati/Lab2/: lab-2-viz-intro.ipynb
PercorsoDati/Lab3-4/: .flake8  .gitlab-ci.yml  Dockerfile  README.md  app.py  config.py  docker-compose.yml  etl.py  main.py  mkdocs.yml  pyproject.toml
PercorsoDati/Lab3-4/config/: config.toml  etl.yml  settings.yml
PercorsoDati/Lab3-4/docs/: index.md
PercorsoDati/Lab3-4/docs/functions/: workflows.md
PercorsoDati/Lab3-4/etl/: extract.py  load.py  transform.py  utils.py
PercorsoDati/Lab3-4/notebooks/: generate_report.ipynb  generate_report_output.ipynb  lab-1-data.ipynb  lab-1-example-1.ipynb  listings_report.html  papermill.ipynb
PercorsoDati/Lab3-4/scripts/: ping_streamlit.py  run_etl.sh  run_streamlit.sh
PercorsoDati/Lab3-4/src/: launch.py
PercorsoDati/Lab3-4/src/common/: dashboard.py  utils.py
PercorsoDati/Lab3-4/src/dashboard/: menu.py
PercorsoDati/Lab3-4/src/dashboard/menus/: components-old.py  main_components.py  side_components.py
PercorsoDati/Lab3-4/src/preprocessing/: process.py
PercorsoDati/Lab3-4/src/tests/: kpi.py
PercorsoDati/Lab3-4/vscode-backup/: launch.json  settings.json
PercorsoDati/dataset/rome-airbnb/: .gitignore  README.md  calendar_sample.csv  reviews_sample.csv  unzip-files-all.sh  unzip-files.sh
PercorsoDati/lab1/: .gitignore  lab-1-data.ipynb  lab-1-example-1.ipynb  lab-1-example-2-Guzzo.ipynb  lab-1-example-2.ipynb  lab-1-example-3.ipynb  lab-1-example-4.ipynb  lab1-pandas-intro.ipynb
RAG/: README.it.md  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
RAG/configs/: arxiv_paper_download.yaml  ingest_to_vector_db.yaml
RAG/notebooks/: 01_pdf_processing_notebook.ipynb  02_retriever_methods_comparison.ipynb  03_query_retrieval_strategies.ipynb  04_rag.ipynb
RAG/src/pipelines/: __init__.py  arxiv_paper_download.py  ingest_to_vector_db.py
RAG/src/sp_rag/: main.py  settings.py
RAG/src/sp_rag/core/: __init__.py  graders.py  retrievers.py
RAG/src/sp_rag/rag/: __init__.py  adaptive.py  agentic.py  base.py  simple.py
RAG/src/sp_rag/utils/: __init__.py  encoders.py
RAG/src/sp_rag/vectordb/: __init__.py  qdrant.py
RAG/src/steps/etl/: __init__.py  chunk_docs.py  clean_docs.py  crawl_arxiv.py  load_docs.py  qdrant_load.py
RAG/src/webapp/: main.py
RAG/tools/: run.py
airtag-analysis/airtag/: .env  .gitignore  README.md  pyproject.toml  requirements.txt
airtag-analysis/airtag/.devcontainer/: devcontainer.json
airtag-analysis/airtag/Dockerfiles/: app.dockerfile  db.dockerfile  dev.dockerfile
airtag-analysis/airtag/app/: main.py
airtag-analysis/airtag/app/config/: readme.md
airtag-analysis/airtag/app/src/: logger.py
airtag-analysis/airtag/docs/: PythonBiellaGroup - AirTag Sentiment Analysis.pptx
airtag-analysis/airtag/notebooks/: AppleAirTag.ipynb
test/streamlit_test/: Dockerfile  README.md  config.py  cookiecutter-config-file.yml  etl.py  mkdocs.yml  pyproject.toml
(+469 files in other folders)
