[tool.poetry]
name = "pbgcalcpardist"
version = "0.1.0"
description = ""
authors = ["Cezar Sas <cezar.sas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = '*'
joblib = "1.0.1"
ray = {extras = ["default"], version = "^1.3.0"}
wikipedia = "^1.4.0"
bokeh = "^2.3.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
