[tool.black]
line-length = 80
exclude = '''
(
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.poetry |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules |
    \.yml$
)
'''

[tool.poetry]
name = "percorsodati"
version = "0.1.0"
description = "Python Biella Group: Percorso Dati"
authors = ["Andrea Guzzo <andrea.guzzo92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.3"
DateTime = "^4.3"
jupyter = "^1.0.0"
jupytext = "^1.11.1"
matplotlib = "^3.4.1"
streamlit = "^0.80.0"
seaborn = "^0.11.1"
plotly = "^4.14.3"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
black = "^20.8b1"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
pytest = "^6.2.3"
autopep8 = "^1.5.6"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
