[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = "Example of streamlit project"
authors = ["Andrea Guzzo <andrea.guzzo92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.80.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
plotly = "^4.14.3"
plotly-express = "^0.4.1"
pandas = "^1.2.4"
numpy = "^1.20.2"
mkdocs = "^1.1.2"
mkdocs-macros-plugin = "^0.5.5"
mkdocs-material = "^7.1.0"
mkdocstrings = "^0.15.0"
mkdocs-autorefs = "^0.1.1"
mkdocs-simple-plugin = "^0.6.0"
install = "^1.3.4"
mkdocs-jupyter = "^0.16.1"
jupyter = "^1.0.0"
Unidecode = "^1.2.0"
watchdog = "^2.0.3"
fsspec = "^2021.4.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
flake8-bandit = "^2.1.2"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
autopep8 = "^1.5.6"
pylint = "^2.7.4"
bandit = "^1.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black formatting
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
virtual_env = ".venv"
