[tool.poetry]
name = "esempio"
version = "0.1.0"
description = ""
authors = ["Andrea Guzzo <andrea.guzzo92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
flake8 = "^3.8.4"
bandit = "^1.7.0"
streamlit = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
