[tool.poetry]
name = "streamlit-page"
version = "0.1.0"
description = ""
authors = ["Andre Wohnsland <Andre_Wohnsland@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.76.0"
pandas = "^1.2.2"
numpy = "^1.20.1"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
